# tradeprocessor

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: Calc.h  CalcInfoWriter.h  EntryProcessor.h  GetCalcs.h  LineSplitter.h  StreamOps.h  StreamProcessor.h
lib/src/: CalcInfoWriter.cpp  EntryProcessor.cpp  LineSplitter.cpp  StreamOps.cpp  StreamProcessor.cpp
tests/: CMakeLists.txt  Calcs_test.cpp
tradeprocessor/: CMakeLists.txt  TradeProcessor.cpp
